--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,9 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # Use the Node.js version compatible with your project
+          node-version: '22.8.0'
           cache: 'npm'
+          cache-dependency-path: doc-arts-ui/package-lock.json
 
       - name: Install Dependencies
         working-directory: ./doc-arts-ui
