--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,14 @@ on:
 
 jobs:
   backend:
-    name: Build and Test Backend
+    name: Build, Test, and Check Coverage for Backend
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history for comparison
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -26,17 +28,33 @@ jobs:
           distribution: 'corretto'
           cache: 'maven'
 
-      - name: Build and Test Backend
+      - name: Build and Test Backend with Coverage
         working-directory: ./doc-arts-backend
-        run: mvn clean verify
+        run: mvn clean verify jacoco:report
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-coverage-report
+          path: ./doc-arts-backend/target/site/jacoco/jacoco.xml
+
+      - name: Check Coverage Decrease
+        uses: irongut/CodeCoverageDelta@v1
+        with:
+          base-coverage-files: ./coverage-base/backend-coverage.xml
+          head-coverage-files: ./doc-arts-backend/target/site/jacoco/jacoco.xml
+          coverage-type: line
+          fail-if-coverage-less-than: 0  # Fail if coverage decreases
 
   frontend:
-    name: Build and Test Frontend
+    name: Build, Test, and Check Coverage for Frontend
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history for comparison
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -49,10 +67,51 @@ jobs:
         working-directory: ./doc-arts-ui
         run: npm ci
 
-      - name: Run Tests
+      - name: Run Tests with Coverage
         working-directory: ./doc-arts-ui
-        run: npm test
+        run: npm test -- --coverage
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-coverage-report
+          path: ./doc-arts-ui/coverage/clover.xml
+
+      - name: Check Coverage Decrease
+        uses: dorny/coverage-check@v2
+        with:
+          baseline-file: ./coverage-base/frontend-coverage.xml
+          coverage-file: ./doc-arts-ui/coverage/clover.xml
+          fail-under: 0  # Fail if coverage decreases
 
       - name: Build Frontend
         working-directory: ./doc-arts-ui
         run: npm run build
+
+  # Download coverage reports from main branch
+  coverage_base:
+    name: Download Base Coverage Reports
+    runs-on: ubuntu-latest
+    needs: [backend, frontend]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          ref: main
+          path: coverage-base
+
+      - name: Generate Backend Coverage Report on Main
+        working-directory: ./coverage-base/doc-arts-backend
+        run: mvn clean verify jacoco:report
+
+      - name: Generate Frontend Coverage Report on Main
+        working-directory: ./coverage-base/doc-arts-ui
+        run: npm ci && npm test -- --coverage
+
+      - name: Upload Base Coverage Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: base-coverage-reports
+          path: |
+            ./coverage-base/doc-arts-backend/target/site/jacoco/jacoco.xml
+            ./coverage-base/doc-arts-ui/coverage/clover.xml
