--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# File: .github/workflows/ci-pipeline.yml
-
 name: CI Pipeline
 
 on:
@@ -28,7 +26,14 @@ jobs:
 
       - name: Build and Test Backend
         working-directory: ./doc-arts-backend
-        run: mvn clean verify
+        run: mvn clean verify org.jacoco:jacoco-maven-plugin:report
+
+      - name: Check Backend Coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./doc-arts-backend/target/site/jacoco/jacoco.xml
+          flags: backend
 
   frontend:
     name: Build and Test Frontend
@@ -49,9 +54,16 @@ jobs:
         working-directory: ./doc-arts-ui
         run: npm ci
 
-      - name: Run Tests
+      - name: Run Tests with Coverage
         working-directory: ./doc-arts-ui
-        run: npm test
+        run: npm test -- --coverage
+
+      - name: Check Frontend Coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./doc-arts-ui/coverage
+          flags: frontend
 
       - name: Build Frontend
         working-directory: ./doc-arts-ui
