--- a/doc-arts-backend/pom.xml
+++ b/doc-arts-backend/pom.xml
@@ -95,6 +95,33 @@
 	<build>
 		<plugins>
 			<plugin>
+			      <groupId>org.jacoco</groupId>
+			      <artifactId>jacoco-maven-plugin</artifactId>
+			      <version>0.8.8</version>
+			      <executions>
+				      <execution>
+					      <id>prepare-agent</id>
+					      <goals>
+						      <goal>prepare-agent</goal>
+					      </goals>
+				      </execution>
+				      <execution>
+					      <id>report</id>
+					      <phase>test</phase>
+					      <goals>
+						      <goal>report</goal>
+					      </goals>
+				      </execution>
+				      <execution>
+					      <id>post-unit-test</id>
+					      <phase>test</phase>
+					      <goals>
+						      <goal>report</goal>
+					      </goals>
+				      </execution>
+			      </executions>
+			</plugin>
+			<plugin>
 				<groupId>org.hibernate.orm.tooling</groupId>
 				<artifactId>hibernate-enhance-maven-plugin</artifactId>
 				<version>${hibernate.version}</version>
