--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,108 +86,35 @@ jobs:
         run: npm run build
 
   coverage:
-    name: Combine and Compare Coverage Reports
+    name: Combine Coverage Reports
     needs: [backend, frontend]
     runs-on: ubuntu-latest
-
+  
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Ensure full history is fetched to access the main branch
-
-      - name: Set up Node.js and Java
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.8.0'
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'corretto'
-
+  
       - name: Download coverage reports
         uses: actions/download-artifact@v4
         with:
-          name: backend-coverage
-          path: coverage-reports/backend
-
-      - uses: actions/download-artifact@v4
-        with:
-          name: frontend-coverage
-          path: coverage-reports/frontend
-
+          path: coverage-reports
+  
       - name: Install .NET Core SDK
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '7.0.x'
-
+  
       - name: Install ReportGenerator
         run: dotnet tool install -g dotnet-reportgenerator-globaltool
-
-      - name: Merge coverage reports for current branch
+  
+      - name: Merge coverage reports
         run: |
           reportgenerator \
-            -reports:"coverage-reports/backend/jacoco.xml;coverage-reports/frontend/coverage-final.json" \
+            -reports:"coverage-reports/**/jacoco.xml;coverage-reports/**/coverage-final.json" \
             -targetdir:"coverage-report" \
-            -reporttypes:"HtmlSummary;Xml"
-
-      - name: Extract coverage percentage for current branch
-        id: coverage_current
-        run: |
-          COVERAGE=$(grep -oPm1 "(?<=<Linecoverage>)[^<]+" coverage-report/summary.xml)
-          echo "Current Branch Coverage: $COVERAGE%"
-          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
-
-      - name: Checkout main branch
-        run: git checkout main
-
-      - name: Build and Test Backend on Main
-        working-directory: ./doc-arts-backend
-        run: |
-          mvn clean verify
-          mvn jacoco:report
-
-      - name: Build and Test Frontend on Main
-        working-directory: ./doc-arts-ui
-        run: |
-          npm ci
-          npm test -- --coverage
-
-      - name: Collect coverage reports from main branch
-        run: |
-          mkdir -p coverage-reports-main/backend
-          mkdir -p coverage-reports-main/frontend
-          cp ./doc-arts-backend/target/site/jacoco/jacoco.xml coverage-reports-main/backend/
-          cp ./doc-arts-ui/coverage/coverage-final.json coverage-reports-main/frontend/
-
-      - name: Merge coverage reports for main branch
-        run: |
-          reportgenerator \
-            -reports:"coverage-reports-main/backend/jacoco.xml;coverage-reports-main/frontend/coverage-final.json" \
-            -targetdir:"coverage-report-main" \
-            -reporttypes:"HtmlSummary;Xml"
-
-      - name: Extract coverage percentage for main branch
-        id: coverage_main
-        run: |
-          COVERAGE=$(grep -oPm1 "(?<=<Linecoverage>)[^<]+" coverage-report-main/summary.xml)
-          echo "Main Branch Coverage: $COVERAGE%"
-          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
-
-      - name: Compare coverage and fail if decreased
-        run: |
-          echo "Current coverage: ${{ steps.coverage_current.outputs.coverage }}%"
-          echo "Main coverage: ${{ steps.coverage_main.outputs.coverage }}%"
-          if (( $(echo "${{ steps.coverage_current.outputs.coverage }} < ${{ steps.coverage_main.outputs.coverage }}" | bc -l) )); then
-            echo "Coverage decreased from main branch!"
-            exit 1
-          else
-            echo "Coverage maintained or improved."
-          fi
-
-      - name: Upload Combined Coverage Report
+            -reporttypes:Html
+  
+      - name: Upload HTML coverage report
         uses: actions/upload-artifact@v4
         with:
           name: combined-coverage-report
