--- a/doc-arts-ui/package.json
+++ b/doc-arts-ui/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next": "14.2.15",
