Issue#12 - update env file to get the right base url

--- a/doc-arts-ui/.env
+++ b/doc-arts-ui/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_MEDIAVALET_CONNECT=connect/authorize
 NEXT_PUBLIC_MEDIAVALET_TOKEN=connect/token
 NEXT_PUBLIC_MEDIAVALET_AUTH_ENDPOINT=https://login.mediavalet.com/
 NEXT_PUBLIC_MEDIAVALET_SUBSCRIPTION_KEY=<Your MediaValet Subscription Key>
+NEXT_PUBLIC_MEDIAVALET_BASE_URL=https://api.mediavalet.com/
