--- a/doc-arts-ui/package.json
+++ b/doc-arts-ui/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
