--- a/doc-arts-ui/package.json
+++ b/doc-arts-ui/package.json
@@ -22,9 +22,9 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.17.6",
+    "@types/react": "18.3.12",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "typescript": "5.6.3"
   }
 }
